add xml to the chart

--- a/docs/examples/converting_formats.ipynb
+++ b/docs/examples/converting_formats.ipynb
@@ -32,6 +32,7 @@
     "  node_9([\"Molfile\"])\n",
     "  node_11((\"SMILES\"))\n",
     "  node_4([\"JSON\\n(BuildAMol)\"])\n",
+    "  node_13([\"XML\\n(BuildAMol)\"])\n",
     "  node_5([\"pickle\\n(BuildAMol)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
@@ -42,6 +43,7 @@
     "  node_3 <--> node_1\n",
     "  node_9 <-.-> node_1\n",
     "  node_11 <-.-> node_1\n",
+    "  node_13 <--> node_1\n",
     "  node_4 <--> node_1\n",
     "  node_5 <--> node_1\n",
     "  node_6 <--> node_1\n",
@@ -49,7 +51,6 @@
     "  node_8 <--> node_1\n",
     "  node_10 <--> node_1\n",
     "  node_12 <--> node_1\n",
-    "  \n",
     "```\n",
     "\n",
     "Here are is a table with the corresponding methods available in the `Molecule` class:\n",
@@ -61,6 +62,7 @@
     "| Molfile   | `from_molfile` | `to_molfile`  |\n",
     "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
+    "| XML       | `from_xml`    | `to_xml`       |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
@@ -397,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.1.-1"
   },
   "orig_nbformat": 4
  },
