--- a/docs/examples/getting_started.ipynb
+++ b/docs/examples/getting_started.ipynb
@@ -7055,6 +7055,7 @@
     "  node_9([\"Molfile\"])\n",
     "  node_11((\"SMILES\"))\n",
     "  node_4([\"JSON\\n(BuildAMol)\"])\n",
+    "  node_13([\"XML\\n(BuildAMol)\"])\n",
     "  node_5([\"pickle\\n(BuildAMol)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
@@ -7066,6 +7067,7 @@
     "  node_9 <-.-> node_1\n",
     "  node_11 <-.-> node_1\n",
     "  node_4 <--> node_1\n",
+    "  node_13 <--> node_1\n",
     "  node_5 <--> node_1\n",
     "  node_6 <--> node_1\n",
     "  node_7 <--> node_1\n",
@@ -7083,6 +7085,7 @@
     "| Molfile   | `from_molfile` | `to_molfile`  |\n",
     "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
+    "| XML       | `from_xml`    | `to_xml`       |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
@@ -7125,7 +7128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.1.-1"
   },
   "orig_nbformat": 4
  },
