update docs +++ new tutorial for bio extension

--- a/docs/examples/nanotube.ipynb
+++ b/docs/examples/nanotube.ipynb
@@ -34,6 +34,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> ### Disclaimer:\n",
+    "> If you just want to make a nanotube but don't care about the tutorial part about making it from scratch you can\n",
+    "> use the `polymers` extension to get a nanotube like this:\n",
+    "> ```python\n",
+    "> from buildamol.extensions.polymers import nanotube\n",
+    "> length = 20\n",
+    "> width = 10\n",
+    "> my_nanotube = nanotube(length, width)\n",
+    "> ```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Building one unit-ring \n",
     "\n",
     "Let's start by making one unit-ring which we can then stack to generate a tube. \n",
