remove unnecessary "sample(1)" in Derivator tutorial

--- a/docs/examples/derivator_example.ipynb
+++ b/docs/examples/derivator_example.ipynb
@@ -169,7 +169,7 @@
    ],
    "source": [
     "# sample is a generator that will yield molecules\n",
-    "mol = next(derivator.sample(1))\n",
+    "mol = next(derivator.sample())\n",
     "mol.py3dmol().show()"
    ]
   },
@@ -1914,7 +1914,7 @@
     "    .functional_group_addable(\"C7\", (bam.hydroxylate, bam.aminate, bam.thiolate), probabilities=(0.5, 0.4, 0.1))\\\n",
     "    .functional_group_addable(\"C9\", (bam.aminate, derivator.nothing), probabilities=(0.3, 0.7))\n",
     "\n",
-    "next(derivator.sample(1)).py3dmol().show()\n"
+    "next(derivator.sample()).py3dmol().show()\n"
    ]
   },
   {
@@ -2027,7 +2027,7 @@
     "derivator.global_modifiers([circularize_at_c5_branch])\n",
     "\n",
     "# and sample a molecule\n",
-    "next(derivator.sample(1)).py3dmol().show()"
+    "next(derivator.sample()).py3dmol().show()"
    ]
   },
   {
@@ -2055,6 +2055,8 @@
    ],
    "source": [
     "fig, axs = plt.subplots(5, 5, figsize=(10, 10))\n",
+    "\n",
+    "# create 25 molecules\n",
     "for i, mol in enumerate(derivator.sample(25)):\n",
     "    ax = axs.flat[i]\n",
     "    ax.imshow(mol.chem2dview().draw())\n",
