add pdbqt to getting-started table

--- a/docs/examples/getting_started.ipynb
+++ b/docs/examples/getting_started.ipynb
@@ -7086,6 +7086,7 @@
     "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
     "| XML       | `from_xml`    | `to_xml`       |\n",
+    "| PDBQT     | `from_pdbqt`  | `to_pdbqt`     |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
