--- a/docs/examples/getting_started.ipynb
+++ b/docs/examples/getting_started.ipynb
@@ -7044,48 +7044,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make working with different data formats as easy as possible, each BuildAMol Molecule can be created and saved to the following formats:\n",
-    "\n",
-    "```mermaid\n",
-    "flowchart TB\n",
-    "\n",
-    "  node_1(\"Molecule\")\n",
-    "  node_2([\"PDB\"])\n",
-    "  node_3([\"mmCIF\"])\n",
-    "  node_9([\"Molfile\"])\n",
-    "  node_11((\"SMILES\"))\n",
-    "  node_4([\"JSON\\n(BuildAMol)\"])\n",
-    "  node_13([\"XML\\n(BuildAMol)\"])\n",
-    "  node_5([\"pickle\\n(BuildAMol)\"])\n",
-    "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
-    "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
-    "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
-    "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
-    "  node_12{{\"stk\\n(stk.BuildingBlock)\"}}\n",
-    "  node_2 <--> node_1\n",
-    "  node_3 <--> node_1\n",
-    "  node_9 <-.-> node_1\n",
-    "  node_11 <-.-> node_1\n",
-    "  node_4 <--> node_1\n",
-    "  node_13 <--> node_1\n",
-    "  node_5 <--> node_1\n",
-    "  node_6 <--> node_1\n",
-    "  node_7 <--> node_1\n",
-    "  node_8 <--> node_1\n",
-    "  node_10 <--> node_1\n",
-    "  node_12 <--> node_1\n",
-    "```\n",
-    "\n",
+    "To make working with different data formats as easy as possible, each BuildAMol Molecule can be created and saved to the following formats.\n",
     "Here are is a table with the corresponding methods available in the `Molecule` class:\n",
     "\n",
     "| Format    | As input      | As output      |\n",
     "| --------- | ------------- | -------------- |\n",
     "| PDB       | `from_pdb`    | `to_pdb`       |\n",
     "| mmCIF     | `from_cif`    | `to_cif`       |\n",
-    "| Molfile   | `from_molfile` | `to_molfile`  |\n",
+    "| Molfile / SDF   | `from_molfile` | `to_molfile`  |\n",
     "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
     "| XML       | `from_xml`    | `to_xml`       |\n",
+    "| XYZ       |  `from_xyz`     |  `to_xyz`        |\n",
     "| PDBQT     | `from_pdbqt`  | `to_pdbqt`     |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
